Добавила размеры для изображений

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="navigation-box">
           <ul class="navigation-box-list">
             <li class="navigation-box-item">
-              <a class="navigation-box-link" href="#"><img src="image/icon/search.svg" alt="Поиск"></a>
+              <a class="navigation-box-link" href="#"><img src="image/icon/search.svg" alt="Поиск" width="20" height="20"></a>
             </li>
             <li class="navigation-box-item">
-              <a class="navigation-box-link" href="#"><img src="image/icon/heart.svg" alt="Добавить в Корзину"></a><p>12</p>
+              <a class="navigation-box-link" href="#"><img src="image/icon/heart.svg" alt="Добавить в Корзину" width="20" height="20"></a><p>12</p>
             </li>
             <li class="navigation-item-box button">
               <a href="#">ХОЧУ СЮДА!</a>
@@ -52,7 +52,7 @@
           <li>
             <h3>Настоящий городок</h3>
             <p> Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-           <img src="image/view-hotel.jpg" alt="Вид на Гостиницу">
+           <img src="image/view-hotel.jpg" alt="Вид на Гостиницу" width="800" height="385">
 
           </li>
           <li>
@@ -120,22 +120,22 @@
       </section>
 
     </main>
-    <footer class="footer-contacts">
+    <footer class="page-footer">
       <div>
-      <ul>
-        <li>
-          <a href="#"><img src="image/vk/social-vk.png" alt="Ссылка на Вконтакте"></a>
+      <ul class="page-footer-list">
+        <li class="page-footer-items">
+          <a href="#"><img src="image/vk/social-vk.png" alt="Ссылка на Вконтакте"  width="24" height="14"></a>
         </li>
-        <li>
-          <a href="#"><img src="image/vk/social-telegram.png" alt="Ссылка на Телеграм"></a>
+        <li class="page-footer-items">
+          <a href="#"><img src="image/vk/social-telegram.png" alt="Ссылка на Телеграм" width="18" height="16"></a>
         </li>
-        <li>
-          <a href="#"><img src="image/vk/social-youtube.png" alt="Ссылка на Ютуб"></a>
+        <li class="page-footer-items">
+          <a href="#"><img src="image/vk/social-youtube.png" alt="Ссылка на Ютуб" width="22" height="17"></a>
         </li>
       </ul>
       </div>
       <a href="tel:+7818121212">+7 (812) 812-12-12</a>
-      <img src="image/Logo.svg" alt="Логотип HTML Academy">
+      <img src="image/Logo.svg" alt="Логотип HTML Academy" width="115" height="33">
     </footer>
     <section class="form-pop-up-search">
 
