--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
+    <div class="shadow-box">
     <header class="page-header">
       <a class="logo">
         <img src="image/logo-header.svg" alt="Логотип городка Седона в Аризоне" width="140" height="70">
@@ -35,8 +37,12 @@
 
       <section class="title-welcome">
         <h1 class="visually-hidden">Седона - город в Аризоне</h1>
-        <img src="image/welcome.svg" alt="Добро пожаловать в Седону">
-
+        <div class="background-index">
+          <div class="welcome-center">
+          <img src="image/welcome.svg" alt="Добро пожаловать в Седону" >
+          </div>
+         <!-- <img src="image/Vector.svg" alt="Украшение"> -->
+        </div>
      </section>
       <section class="reason-box">
         <h2>Седона — небольшой городок в Аризоне,
@@ -176,6 +182,6 @@
       </form>
 
     </section>
-
+  </div>
   </body>
 </html>
