Добавила CSS стили

--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
+    <div class="shadow-box">
     <header class="page-header">
       <a class="logo">
         <img src="image/logo-header.svg" alt="Логотип городка Седона в Аризоне" width="140" height="70">
@@ -32,6 +34,7 @@
         </div>
 
     </header>
+
     <main class="main-catalog">
       <section class="form-main">
       <h1> Гостиницы Седоны </h1>
@@ -237,7 +240,7 @@
       <a href="tel:+7818121212">+7 (812) 812-12-12</a>
       <img src="image/Logo.svg" alt="Логотип HTML Academy" width="115" height="33">
     </footer>
-
+    </div>
 
   </body>
 </html>
