Обновила стили hr

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
-    <div class="shadow-box content"">
+    <div class="shadow-box content">
     <header class="page-header">
       <a class="logo">
         <img src="image/logo-header.svg" alt="Логотип городка Седона в Аризоне" width="140" height="70">
@@ -64,20 +64,20 @@
           </li>
           <li>
             <h3 class="header-name-line">Небольшая площадь</h3>
-            <hr width="60">
+            <hr  class="hr-line">
             <p class="name-p-line"> Все достопримечательности находятся очень близко </p>
 
           </li>
 
           <li>
             <h3 class="header-name-line">Красивая дорога</h3>
-            <hr width="60">
+            <hr  class="hr-line">
             <p class="name-p-line">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
 
           <li>
             <h3 class="header-name-line">Мало туристов</h3>
-            <hr width="60">
+            <hr class="hr-line">
             <p class="name-p-line">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
 
@@ -86,7 +86,7 @@
 
              <h3 class="header-name">Там есть
               мост дьявола</h3>
-            <hr width="60">
+            <hr class="hr-line">
             <p >Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
         </ul>
